# app/webroot/doc/openapi.yaml
@@ -5,23 +5,23 @@ info:
   description: |
 
     ### Getting Started
-    Automation functionality is designed to automatically generate signatures for intrusion detection systems. 
-    To enable signature generation for a given attribute, Signature field of this attribute must be set to Yes. 
-    Note that not all attribute types are applicable for signature generation, currently we only support NIDS signature 
-    generation for IP, domains, host names, user agents etc., and hash list generation for MD5/SHA1 values of file artefacts. 
-    Support for more attribute types is planned. To make this functionality available for automated tools an authentication 
-    key is used. This makes it easier for your tools to access the data without further form-based-authentication. 
-    The [API](https://www.circl.lu/doc/misp/GLOSSARY.html#api) key can be found and managed under My Profile page (/users/view/me) 
+    Automation functionality is designed to automatically generate signatures for intrusion detection systems.
+    To enable signature generation for a given attribute, Signature field of this attribute must be set to Yes.
+    Note that not all attribute types are applicable for signature generation, currently we only support NIDS signature
+    generation for IP, domains, host names, user agents etc., and hash list generation for MD5/SHA1 values of file artefacts.
+    Support for more attribute types is planned. To make this functionality available for automated tools an authentication
+    key is used. This makes it easier for your tools to access the data without further form-based-authentication.
+    The [API](https://www.circl.lu/doc/misp/GLOSSARY.html#api) key can be found and managed under My Profile page (/users/view/me)
     on a MISP instance.
 
-    #### Accept and Content-Type headers 
-    When performing your request, depending on the type of request, you might need to explicitly specify in what content 
+    #### Accept and Content-Type headers
+    When performing your request, depending on the type of request, you might need to explicitly specify in what content
     type you want to get your results. This is done by setting one of the below `Accept` headers:
 
         Accept: application/json
         Accept: application/xml
 
-    When submitting data in a `POST`, `PUT` or `DELETE` operation you also need to specify in what content-type you encoded the payload. 
+    When submitting data in a `POST`, `PUT` or `DELETE` operation you also need to specify in what content-type you encoded the payload.
     This is done by setting one of the below `Content-Type` headers:
 
         Content-Type: application/json
@@ -31,7 +31,7 @@ info:
     ```
     curl  --header "Authorization: YOUR_API_KEY" \
           --header "Accept: application/json" \
-          --header "Content-Type: application/json" https://<misp url>/ 
+          --header "Content-Type: application/json" https://<misp url>/
     ```
 
     > **NOTE**: By appending .json or .xml the content type can also be set without the need for a header.
@@ -5476,6 +5476,7 @@ components:
         - "MispObject"
         - "Module"
         - "News"
+        - "SavedSearches"
         - "NoticelistEntry"
         - "Noticelist"
         - "NotificationLog"
@@ -5994,16 +5995,16 @@ components:
       in: header
       name: Authorization
       description: |
-        The authentication of the automation is performed via a secure key available in the MISP UI interface. 
-        Make sure you keep that key secret as it gives access to the entire database! The [API](https://www.circl.lu/doc/misp/GLOSSARY.html#api) 
+        The authentication of the automation is performed via a secure key available in the MISP UI interface.
+        Make sure you keep that key secret as it gives access to the entire database! The [API](https://www.circl.lu/doc/misp/GLOSSARY.html#api)
         key is available in the event actions menu under automation.
 
         The authorization is performed by using the following header in the API requests:
 
             Authorization: YOUR_API_KEY
-            
-        > **NOTE**: Since version 2.2 the usage of the authentication key in the URL is deprecated. 
-          Instead, pass the auth key in an Authorization header in the request. The legacy option of having the auth key 
+
+        > **NOTE**: Since version 2.2 the usage of the authentication key in the URL is deprecated.
+          Instead, pass the auth key in an Authorization header in the request. The legacy option of having the auth key
           in the URL is temporarily still supported but not recommended.
 
   requestBodies:
